2014-08-19  Zalan Bujtas  <zalan@apple.com>

        Remove ENABLE(SUBPIXEL_LAYOUT).
        https://bugs.webkit.org/show_bug.cgi?id=136077

        Reviewed by Simon Fraser.

        Remove compile time flag SUBPIXEL_LAYOUT. All ports have it enabled for a while now.

        * Configurations/FeatureDefines.xcconfig:

2014-08-19  Alex Christensen  <achristensen@webkit.org>

        [CMake] Generate LLInt assembly correctly on Windows.
        https://bugs.webkit.org/show_bug.cgi?id=135888

        Reviewed by Oliver Hunt.

        * CMakeLists.txt:
        Generate LowLevelInterpreterWin.asm instead of LLIntAssembly.h on Windows like the existing build system.
        * PlatformWin.cmake:
        Don't build JSGlobalObjectInspectorController.cpp on Windows.
        * offlineasm/x86.rb:
        Detect non-cygwin ruby installations correctly.

2014-08-19  Michael Saboff  <msaboff@apple.com>

        REGRESSION(r163179): It broke the build on ARM Thumb2 with GCC
        https://bugs.webkit.org/show_bug.cgi?id=136028

        Reviewed by Oliver Hunt.

        Added back ARMv7 conditionals around three op addp and subp since ARM Thumb2 spec says that
        the behavior for those ops are undefined.  This was originally done in changeset 163179.

        * llint/LowLevelInterpreter32_64.asm:

2014-08-18  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r172741.
        https://bugs.webkit.org/show_bug.cgi?id=136058

        This change is breaking PLT. (Requested by mlam on #webkit).

        Reverted changeset:

        "REGRESSION(r172401): for-in optimization no longer works at
        all"
        https://bugs.webkit.org/show_bug.cgi?id=136056
        http://trac.webkit.org/changeset/172741

2014-08-18  Filip Pizlo  <fpizlo@apple.com>

        REGRESSION(r172401): for-in optimization no longer works at all
        https://bugs.webkit.org/show_bug.cgi?id=136056

        Reviewed by Mark Hahnenberg.
        